# docs/swagger.json
@@ -434,7 +434,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/devices/create": {
             "post": {
                 "description": "通过此接口新增一个设备，获取设备id",
                 "consumes": [
@@ -461,6 +463,12 @@
                         "name": "name",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "设备ID(可选，不提供则自动生成)",
+                        "name": "deviceId",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -890,8 +898,7 @@
                     }
                 },
                 "total": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "integer"
                 }
             }
         },
@@ -905,8 +912,7 @@
                     }
                 },
                 "total": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "integer"
                 }
             }
         },
@@ -920,8 +926,7 @@
                     }
                 },
                 "total": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "integer"
                 }
             }
         },
